--- a/styleie.css
+++ b/styleie.css
@@ -1,11 +1,15 @@
 body
 {
-  overflow-y: hidden;
+  overflow: hidden;
 }
+
 div.content
 {
   height: 100%;
-  padding: 1em;
-  width: 100%;
-  overflow: auto;
+  padding: 0 0 0 1em;
+  top: 0;
+  left: 0;
+  margin: 0 0 0 11em;
+  width: auto;
+  overflow-y: auto;
 }
